# flix

./: pyproject.toml
helpers/: utils.py
scr/: main.py
